--- a/18-compute/18-compute.vcxproj
+++ b/18-compute/18-compute.vcxproj
@@ -98,23 +98,23 @@
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;VK_USE_PLATFORM_WIN32_KHR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(VK_SDK_PATH)\Include;..\third-party</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VULKAN_SDK)\Include;..\third-party</AdditionalIncludeDirectories>
       <TreatWarningAsError>false</TreatWarningAsError>
       <DisableSpecificWarnings>4100;4146;4305;4324;4458;4838;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(VK_SDK_PATH)\Lib;..\x64\Debug\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(VULKAN_SDK)\Lib;..\x64\Debug\</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;magma.lib;framework.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuild>
       <Command>$(VK_SDK_PATH)\Bin32\glslangValidator.exe -V compute.comp -e pow --source-entrypoint main -o pow.o </Command>
     </CustomBuild>
     <PreBuildEvent>
-      <Command>$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e sum --source-entrypoint main -o sum.o
-$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e mul --source-entrypoint main -o mul.o
-$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-entrypoint main -o power.o
+      <Command>$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e sum --source-entrypoint main -o sum.o
+$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e mul --source-entrypoint main -o mul.o
+$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-entrypoint main -o power.o
 
 </Command>
       <Message>Compile compute shaders</Message>
@@ -127,14 +127,14 @@ $(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-ent
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;VK_USE_PLATFORM_WIN32_KHR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(VK_SDK_PATH)\Include;..\third-party</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VULKAN_SDK)\Include;..\third-party</AdditionalIncludeDirectories>
       <TreatWarningAsError>false</TreatWarningAsError>
       <DisableSpecificWarnings>4100;4146;4305;4324;4458;4838;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(VK_SDK_PATH)\Lib32;..\Debug</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(VULKAN_SDK)\Lib32;..\Debug</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;magma.lib;framework.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuild>
@@ -142,9 +142,9 @@ $(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-ent
       </Command>
     </CustomBuild>
     <PreBuildEvent>
-      <Command>$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e sum --source-entrypoint main -o sum.o
-$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e mul --source-entrypoint main -o mul.o
-$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-entrypoint main -o power.o
+      <Command>$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e sum --source-entrypoint main -o sum.o
+$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e mul --source-entrypoint main -o mul.o
+$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-entrypoint main -o power.o
 
 </Command>
       <Message>Compile compute shaders</Message>
@@ -159,7 +159,7 @@ $(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-ent
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;VK_USE_PLATFORM_WIN32_KHR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(VK_SDK_PATH)\Include;..\third-party</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VULKAN_SDK)\Include;..\third-party</AdditionalIncludeDirectories>
       <TreatWarningAsError>false</TreatWarningAsError>
       <DisableSpecificWarnings>4100;4146;4305;4324;4458;4838;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -169,16 +169,16 @@ $(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-ent
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(VK_SDK_PATH)\Lib32;..\Release</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(VULKAN_SDK)\Lib32;..\Release</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;magma.lib;framework.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuild>
       <Command>$(VK_SDK_PATH)\Bin32\glslangValidator.exe -V compute.comp -e pow --source-entrypoint main -o pow.o </Command>
     </CustomBuild>
     <PreBuildEvent>
-      <Command>$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e sum --source-entrypoint main -o sum.o
-$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e mul --source-entrypoint main -o mul.o
-$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-entrypoint main -o power.o
+      <Command>$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e sum --source-entrypoint main -o sum.o
+$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e mul --source-entrypoint main -o mul.o
+$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-entrypoint main -o power.o
 
 </Command>
       <Message>Compile compute shaders</Message>
@@ -193,7 +193,7 @@ $(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-ent
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;VK_USE_PLATFORM_WIN32_KHR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(VK_SDK_PATH)\Include;..\third-party</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VULKAN_SDK)\Include;..\third-party</AdditionalIncludeDirectories>
       <TreatWarningAsError>false</TreatWarningAsError>
       <DisableSpecificWarnings>4100;4146;4305;4324;4458;4838;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
@@ -203,16 +203,16 @@ $(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-ent
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(VK_SDK_PATH)\Lib;..\x64\Release</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(VULKAN_SDK)\Lib;..\x64\Release</AdditionalLibraryDirectories>
       <AdditionalDependencies>vulkan-1.lib;magma.lib;framework.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuild>
       <Command>$(VK_SDK_PATH)\Bin32\glslangValidator.exe -V compute.comp -e pow --source-entrypoint main -o pow.o </Command>
     </CustomBuild>
     <PreBuildEvent>
-      <Command>$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e sum --source-entrypoint main -o sum.o
-$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e mul --source-entrypoint main -o mul.o
-$(VK_SDK_PATH)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-entrypoint main -o power.o
+      <Command>$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e sum --source-entrypoint main -o sum.o
+$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e mul --source-entrypoint main -o mul.o
+$(VULKAN_SDK)\Bin\glslangValidator.exe -V arithmetic.comp -e power --source-entrypoint main -o power.o
 
 </Command>
       <Message>Compile compute shaders</Message>
